fixed overflow bug and added alert if user doesnt specify a value for a custom grid

--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@
     margin-left: auto;
     margin-right: auto;
     flex-wrap: wrap;
+    overflow: hidden;
 }
 
 .extraInfo {
